make starting changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <style>
         html,
         body {
-            margin: 0;
-            padding: 0;
+            background-color: black;
+        }
+
+        canvas {
+            margin: auto;
         }
     </style>
 </head>
@@ -21,9 +24,9 @@
 <body>
 
     <div id="content"></div>
+
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/bundle.js"></script>
-
 </body>
 
 </html>
