--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         html,
         body {
-            background-color: black;
+            background-color: #f9f6f2;
         }
 
         canvas {
