--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Phaser - ES6 - Webpack</title>
+    <title>SunShower</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -24,9 +24,8 @@
 <body>
 
     <div id="content"></div>
-
-    <script src="docs/vendor.bundle.js"></script>
-    <script src="docs/bundle.js"></script>
+    <script src="dist/vendor.bundle.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 
 </html>
