--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>SunShower</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta http-equiv="cleartype" content="on">
+    <!--<meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">-->
+    <!--<meta http-equiv="cleartype" content="on">-->
 
     <style>
         html,
