--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--<meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">-->
-    <!--<meta http-equiv="cleartype" content="on">-->
+    <meta http-equiv="cleartype" content="on">
 
     <style>
         html,
